objects/Forecast_Definition__c.object
<CustomObject>
    <fields>
        <fullName>Category_Label__c</fullName>
        <description>This field is used to display the category in the table</description>
        <label>Category Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Used to define grouping of item into categories: A, B, Distribution. For each category a separate subtotal is pro-vided. Categories A and B are in addition subtotaled to Direct.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSM_Name__c</fullName>
        <label>GSM Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSM_Sequence__c</fullName>
        <label>GSM Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GSM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IND_Customer_Classification__c</fullName>
        <label>IND Customer Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industrial_Sales_Team_Include__c</fullName>
        <description>All accounts which belong to level 2 sales hierarchy of the defination for Industrial are aggregated under “Industrial Sales Team”, all others are “Other BU Sales Team”.</description>
        <label>Industrial Sales Team Include</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Profit_Center_Region__c</fullName>
        <formula>Profit_Center__c &amp; &quot; &quot; &amp;  Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit Center Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profit_Center__c</fullName>
        <description>Filter criteria based on Monthly BBB SAP Profit Center.  Defines profit center for given item. Values: A&amp;C, IB, Rail, Solar</description>
        <label>Profit Center</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Forecast_Category_Excludes__c</fullName>
        <description>Filter criteria based on IND RSM Forecast Category on Account. Defines a comma-separated list of category codes selected for given item. All values in this list will be excluded from searched.</description>
        <label>RSM Forecast Category Excludes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RSM_Forecast_Category_Includes__c</fullName>
        <description>Filter criteria based on IND RSM Forecast Category on Account. Defines a comma-separated list of category codes selected for given item. All values in this list will be searched by.</description>
        <label>RSM Forecast Category Includes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RSM_Se_quence__c</fullName>
        <description>Defines sort order of items within one category in RSM Forecast page.</description>
        <label>RSM Se-quence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forecast_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Filter criteria based on Customer Region on Account. Defines RSM’s region for given item. Values: Asia (excl. China and Japan), Australia / New Zealand, China / HK / Taiwan, EMEA (excl. India), India, Japan, North America, South America</description>
        <label>Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if item provides a subtotal for all items of same category. Default value is false.</description>
        <label>Subtotal</label>
        <type>Checkbox</type>
    </fields>
    <label>Forecast Definition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Category_Label__c</columns>
        <columns>GSM__c</columns>
        <columns>GSM_Name__c</columns>
        <columns>IND_Customer_Classification__c</columns>
        <columns>Industrial_Sales_Team_Include__c</columns>
        <columns>Profit_Center__c</columns>
        <columns>Profit_Center_Region__c</columns>
        <columns>RSM__c</columns>
        <columns>RSM_Forecast_Category_Excludes__c</columns>
        <columns>RSM_Forecast_Category_Includes__c</columns>
        <columns>RSM_Se_quence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Forecast Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>